# SystemApps

./: CMakeLists.txt  README.md
FileBrowse/: CMakeLists.txt  sl_settings.json
FileBrowse/src/: Application.cpp  CMakeLists.txt  main.cpp
FileBrowse/src/model/: Model.hpp
FileBrowse/src/view/: BrowseFiles.cpp  BrowseFiles.hpp
FileBrowser/: CMakeLists.txt  sl_settings.json
FileBrowser/src/: Application.cpp  Application.hpp  CMakeLists.txt  Folder.cpp  Folder.hpp  Model.cpp  Model.hpp  SystemStyles.cpp  SystemStyles.hpp  main.cpp
FileSelect/: CMakeLists.txt  sl_settings.json
FileSelect/src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
FileSelect/src/view/: SelectFiles.cpp  SelectFiles.hpp
TextView/: CMakeLists.txt  sl_settings.json
TextView/src/: Application.cpp  Application.hpp  CMakeLists.txt
TextView/src/model/: Model.hpp
TextView/src/view/: ViewFile.cpp  ViewFile.hpp
